--- a/README.adoc
+++ b/README.adoc
@@ -27,14 +27,17 @@ docker run --rm -it \
 
 == Link checking
 
-Run this locally to check the local state once the server is running: 
+Run this locally to check the state of the local copy.
 
 [source,bash]
 ----
-docker run --rm -it -v $(pwd):/src -p 1313:1313 klakegg/hugo:0.85.0-asciidoctor-onbuild && docker run -v $PWD:/check ghcr.io/untitaker/hyperlink:0.1.26 /check/public/
+mkdir /tmp/hugo_public && \
+docker run --rm -it -v $(pwd):/src -v /tmp/hugo_public:/tmp/public klakegg/hugo:0.85.0-asciidoctor-onbuild  --buildFuture --buildDrafts -d /tmp/public && \
+docker run -v /tmp/hugo_public:/check ghcr.io/untitaker/hyperlink:0.1.26 /check && 
+rm -rf /tmp/hugo_public
 ----
 
-Link checking is also configuring as an action for any PR, and as a scheduled action. 
+Link checking is also configuring as an action for any PR.
 
 == Broken theme
 
