--- a/content/post/dataeng_resources.adoc
+++ b/content/post/dataeng_resources.adoc
@@ -35,6 +35,7 @@ The main podcast that I listen to in this area is the https://www.dataengineerin
 
 * https://www.dataengineeringpodcast.com/joe-reis-flips-the-script-episode-307/[Joe Reis Flips The Script And Interviews Tobias Macey About The Data Engineering Podcast]
 * Implementations
+  ** https://www.dataengineeringpodcast.com/riskified-data-platform-journey-episode-306/[Charting the Path of Riskified's Data Platform Journey]
   ** https://www.dataengineeringpodcast.com/segment-customer-analytics-episode-72/[Customer Analytics At Scale With Segment]
   ** https://www.dataengineeringpodcast.com/snuba-event-data-warehouse-episode-108/[Building A Real Time Event Data Warehouse For Sentry]
   ** https://www.dataengineeringpodcast.com/shopify-data-warehouse-with-dbt-episode-171/[How Shopify Is Building Their Production Data Warehouse Using DBT]
