first two posts ready for review

--- a/content/post/data_ecosystem_notes_2022.adoc
+++ b/content/post/data_ecosystem_notes_2022.adoc
@@ -43,7 +43,9 @@ It's hard to write a piece like this without invoking https://www.youtube.com/wa
 * ETL/ELT the data into a target Data Warehouse or Data Mart, probably with a star or snowflake schema
 * Build dashboards on the data
 
-<< put a diagram here >>
+image::/images/2022/09/simpledw.png[Source DB -> DW -> Dashboard]
+
+_It was maybe not as neat as this, with various elements of "shadow IT" springing up to circumvent real [or perceived] limitations - but at least you knew what you_ should _be doing and aspiring for_.
 
 Extracts were usually once a day. Operational Data Stores were becoming a bit trendy then along with 'micro-batch' extracts which meant data coming maybe more frequently, e.g. 5-10 minutes
 
@@ -73,29 +75,38 @@ Data is no longer used just to print out on a report on a Monday morning. Data i
 
 Handling of data is done by many teams, not just one. In the new world of the Data Mesh even source system owners are supposed to get in on the game and publish their data as a data product. Outside of IT, other departments in a company are staffed by a new generation of "technology native" employees - those who grew up with the internet and computers as just as much a part of their worlds as television and the telephone. Rather than commissioning a long project from the IT department they're as likely to self-serve their requirements, either building something themselves or using a credit card to sign up for one of the thousands of SaaS platforms. 
 
+The data engineering world has realised—if not fully accepted—that software engineering practices including testing, CI/CD, etc are important - see https://www.youtube.com/watch?v=uixZ7NcGoeE&t=450s[this interesting discussion] on the "shift left" of data engineering.
+
 Hardware is not limited to what you can procure and provision in your data center through a regimented and standardised central process, but whatever you can imagine (and afford) in the Cloud. Laptops themselves are so powerful that much processing can just be done locally. And the fact that it's laptops is notable - now anyone can work anywhere. The desktop machine in the office is becoming an anachronistic idea except for specialised roles such as video processing. That mobility in its adds considerations to how technology serves us too. 
+
+Both https://seattledataguy.substack.com/[SeattleDataGuy] in his article https://seattledataguy.substack.com/p/the-baseline-datastack-going-beyond[The Baseline Data Stack] and https://www.linkedin.com/in/jamesdensmore/[James Densmore] in his book https://www.oreilly.com/library/view/data-pipelines-pocket/9781492087823/[Data Pipelines Pocket Reference] describe a basic approach to moving data into a place from which it can be analysed. Build a pipeline to do a batch extract of data from the source system into a target store from which it can be worked on. No streaming, no fancy tooling - just good ole' ETL. Same as we saw above, right? 
+
++++
+<div class="tenor-gif-embed" data-postid="23108779" data-share-method="host" data-aspect-ratio="1" data-width="50%"><a href="https://tenor.com/view/sir-im-confused-butters-stotch-south-park-s15e6-city-sushi-gif-23108779">Sir Im Confused Butters Stotch GIF</a>from <a href="https://tenor.com/search/sir+im+confused-gifs">Sir Im Confused GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
++++
+
+Well not really. Because instead of one or two sources, there are probably dozens if not hundreds. Instead of one central data warehouse there will be numerous data stores. And rather than just a set of static reports to print out for a Monday morning, the data is being used in every corner of the business on every device and platform you can imagine. 
+
+
+### All Change, Please 
 
 The world of software has been blown apart, driven in my opinion by the internet, Cloud, and open source.
 
-image::https://archive.org/download/X09-51175/preview.jpg[Microsoft SQL Server 2000 CD] 
+image::https://archive.org/download/X09-51175/preview.jpg[Microsoft SQL Server 2000 CD,500] 
 
 Never mind placing an order for software and waiting for the installation media to arrive. The world of software is at our disposal and just a download link away. With Docker you can spin up and try a dozen data stores in a day and pick the one that suits you best. Cloud gives you the ability to provision capacity on which to run whatever you'd like (IaaS), or as is widely the case provision the software itself (SaaS). They host it, they support it, they tune it - all you do it use it. Companies no longer have to choose simply between paying IBM for a mainframe license or Microsoft for a Windows licence, but whether to pay at all. Linux went from being a niche geek interest to the foundation on which a huge number of critical systems run. Oracle is still a dominant player in the RDBMS world but you're no longer an oddity if you propose to use Postgres instead. 
 
 And speaking of a dozen data stores, nowadays there are stores specialised for every purpose. NoSQL, oldSQL, someSQL, NewSQL and everywhere in between. Graph, relational, and document. AWS in particular has leant into this, mirroring what's available to run yourself in their plethora of SaaS offerings in the data space. 
 
-The data engineering world has realised—if not fully accepted—that software engineering practices including testing, CI/CD, etc are important - see https://www.youtube.com/watch?v=uixZ7NcGoeE&t=450s[this interesting discussion] on the "shift left" of data engineering.
+### Job Titles 
 
 In terms of job titles, back in the day you were often a _programmer_, a _datawarehouse specialist_, a _BI analyst_, and all and many titles in between. Nowadays you have people who get the actual value out of the data that pays for all of this to happen, and they might still be called Analysts of one flavour or another but more often Data Scientists. This overlaps and bleeds into the ML world too. For a few years the people who got the data for the analysts to work with were https://medium.com/free-code-camp/the-rise-of-the-data-engineer-91be18f1e603[*Data Engineers*] (modelling the Software Engineers that "programmers" of old had become). It seems to me that this label has split further, with Data Engineering being the discipline of getting the data out of the source, building the pipelines to get it into some kind of staging area (e.g. data lake). From here the https://benn.substack.com/p/why-do-people-want-to-be-analytics[*Analytics Engineers*] take over, cleansing and perhaps restructuring it into a form and schema that is accessible and performant for the required use.
 
 ## Where to Start? 
 
-There is a *lot* to cover, even if I were to just summarise across all of it. There are **seventy seven** **_sub-categeries_** alone in Matt Turck's useful survey of the landscape (http://46eybw2v1nh52oe80d3bi91u-wpengine.netdna-ssl.com/wp-content/uploads/2020/09/2020-Data-and-AI-Landscape-Matt-Turck-at-FirstMark-v1.pdf[pdf] / http://dfkoz.com/ai-data-landscape/[source data] / https://mattturck.com/data2020/[article]) -- and that's from 2 years ago 😅 (lakeFS published something similar for https://lakefs.io/the-state-of-data-engineering-2022/[2022]). 
+So there is a *lot* to cover, even if I were to just summarise across all of it. There are **seventy seven** **_sub-categeries_** alone in Matt Turck's useful survey of the landscape (http://46eybw2v1nh52oe80d3bi91u-wpengine.netdna-ssl.com/wp-content/uploads/2020/09/2020-Data-and-AI-Landscape-Matt-Turck-at-FirstMark-v1.pdf[pdf] / http://dfkoz.com/ai-data-landscape/[source data] / https://mattturck.com/data2020/[article]) -- and that's from 2 years ago 😅 (lakeFS published something similar for https://lakefs.io/the-state-of-data-engineering-2022/[2022]). 
 
 What I'm going to do is dig into some of the particular areas that have caught my eye, which is generally those closest related to the developments in the specific area of my interest - data engineering for analytics purposes. Even then I'm sure I'll miss a huge swath of relevant content. 
-
-Both https://seattledataguy.substack.com/[SeattleDataGuy] in his article https://seattledataguy.substack.com/p/the-baseline-datastack-going-beyond[The Baseline Data Stack] and https://www.linkedin.com/in/jamesdensmore/[James Densmore] in his book https://www.oreilly.com/library/view/data-pipelines-pocket/9781492087823/[Data Pipelines Pocket Reference] describe a basic approach to moving data into a place from which it can be analysed. Build a pipeline to do a batch extract of data from the source system into a target store from which it can be worked on. No streaming, no fancy tooling - just good ole' ETL. 
-
-But what is the data store? How do you extract, load, and transform the data? These are the things that I am going to dig into in subsequent articles. 
 
 '''
 
