Ready for review

--- a/content/post/data_ecosystem_notes_2022.adoc
+++ b/content/post/data_ecosystem_notes_2022.adoc
@@ -1,5 +1,5 @@
 ---
-draft: true
+draft: false
 title: 'Data Engineering in 2022 / S01E01: Stretching my Legs & Scratching an Itch'
 date: "2022-09-14T10:42:30Z"
 thumbnail: "/images/2022/09/IMG_7557.jpeg"
@@ -109,9 +109,9 @@ So there is a *lot* to cover, even if I were to just summarise across all of it.
 What I'm going to do is dig into some of the particular areas that have caught my eye, which is generally those closest related to the developments in the specific area of my interest - data engineering for analytics purposes. Even then I'm sure I'll miss a huge swath of relevant content. 
 
 '''
-
+* link:/2022/09/14/data-engineering-in-2022-/-s01e01-stretching-my-legs-scratching-an-itch/[S01E01: Stretching my Legs & Scratching an Itch]
 * link:/2022/09/14/data-engineering-s01e02-storage-and-access/[S01E02: Storage and Access]
-* link:/2022/09/xxxxx[S01E03: Query & Transformation Engines]
-* link:/2022/09/xxxxx[S01E04: ETL/ELT tools & Orchestration]
-* link:/2022/09/xxxxx[S01E05: Architectures & Terminology]
-* link:/2022/09/xxxxx[S01E06: Resources]
+* S01E03: Query & Transformation Engines
+* S01E04: ETL/ELT tools & Orchestration
+* S01E05: Architectures & Terminology
+* link:/2022/09/13/data-engineering-s01e06-resources/[S01E06: Resources]
