--- a/content/post/dataeng_resources.adoc
+++ b/content/post/dataeng_resources.adoc
@@ -1,9 +1,9 @@
 ---
 draft: false
-title: 'Data Engineering S01E06: Resources'
+title: 'Data Engineering: Resources'
 date: "2022-09-14T20:57:21Z"
-image: "/images/2022/09/"
-thumbnail: "/images/2022/09/"
+// image: "/images/2022/09/"
+// thumbnail: "/images/2022/09/"
 credit: "https://twitter.com/rmoff/"
 categories:
 - Data Engineering
@@ -47,9 +47,12 @@ The main podcast that I listen to in this area is the https://www.dataengineerin
   ** https://www.dataengineeringpodcast.com/lakefs-data-lake-versioning-episode-157/[Add Version Control To Your Data Lake With LakeFS]
 
 '''
-* link:/2022/09/14/data-engineering-in-2022-/-s01e01-stretching-my-legs-scratching-an-itch/[S01E01: Stretching my Legs & Scratching an Itch]
-* link:/2022/09/14/data-engineering-s01e02-storage-and-access/[S01E02: Storage and Access]
-* S01E03: Query & Transformation Engines
-* S01E04: ETL/ELT tools & Orchestration
-* S01E05: Architectures & Terminology
-* link:/2022/09/13/data-engineering-s01e06-resources/[S01E06: Resources]
+
+## Data Engineering in 2022
+
+* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
+* link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
+* Query & Transformation Engines
+* ETL/ELT tools & Orchestration
+* Architectures & Terminology
+* link:/2022/09/14/data-engineering-resources/[Resources]
