--- a/content/post/dataeng_storage_access.adoc
+++ b/content/post/dataeng_storage_access.adoc
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: 'Data Engineering in 2022 / S01E02: Storage and Access'
+title: 'Data Engineering in 2022: Storage and Access'
 date: "2022-09-14T17:07:04Z"
 image: "/images/2022/09/h_IMG_8389.jpeg"
 thumbnail: "/images/2022/09/t_IMG_5037.jpeg"
@@ -21,7 +21,7 @@ categories:
 
 In this article I look at where we store our analytical data, how we organise it, and how we enable access to it. I'm considering here potentially large volumes of data for access throughout an organisation. I'm not looking at data stores that are used for specific purposes (caches, low-latency analytics, graph etc).
 
-The article is link:/2022/09/14/data-engineering-s01e01-stretching-my-legs-in-the-analytical-data-ecosystem-in-2022/[part of a series] in which I explore the world of data engineering in 2022 and how it has changed from when I started my career in data warehousing 20+ years ago. Read the link:/2022/09/14/data-engineering-s01e01-stretching-my-legs-in-the-analytical-data-ecosystem-in-2022/[introduction] for more context and background.
+The article is link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[part of a series] in which I explore the world of data engineering in 2022 and how it has changed from when I started my career in data warehousing 20+ years ago. Read the link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[introduction] for more context and background.
 
 <!--more-->
 
@@ -171,9 +171,9 @@ The "git for data" pitch is a great way to articulate things, but it also shifte
 
 ## Data Engineering in 2022
 
-* link:/2022/09/14/data-engineering-in-2022-/-s01e01-stretching-my-legs-scratching-an-itch/[S01E01: Stretching my Legs & Scratching an Itch]
-* link:/2022/09/14/data-engineering-s01e02-storage-and-access/[S01E02: Storage and Access]
-* S01E03: Query & Transformation Engines
-* S01E04: ETL/ELT tools & Orchestration
-* S01E05: Architectures & Terminology
-* link:/2022/09/13/data-engineering-s01e06-resources/[S01E06: Resources]
+* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
+* link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
+* Query & Transformation Engines
+* ETL/ELT tools & Orchestration
+* Architectures & Terminology
+* link:/2022/09/14/data-engineering-resources/[Resources]
