--- a/content/post/data_ecosystem_notes_2022.adoc
+++ b/content/post/data_ecosystem_notes_2022.adoc
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: 'Data Engineering in 2022 / S01E01: Stretching my Legs & Scratching an Itch'
+title: 'Stretching my Legs in the Data Engineering Ecosystem in 2022'
 date: "2022-09-14T10:42:30Z"
 thumbnail: "/images/2022/09/IMG_7557.jpeg"
 image: "/images/2022/09/RemoteMediaFile_6554199_0_2022_07_15_21_21_20.jpeg"
@@ -109,9 +109,10 @@ So there is a *lot* to cover, even if I were to just summarise across all of it.
 What I'm going to do is dig into some of the particular areas that have caught my eye, which is generally those closest related to the developments in the specific area of my interest - data engineering for analytics purposes. Even then I'm sure I'll miss a huge swath of relevant content. 
 
 '''
-* link:/2022/09/14/data-engineering-in-2022-/-s01e01-stretching-my-legs-scratching-an-itch/[S01E01: Stretching my Legs & Scratching an Itch]
-* link:/2022/09/14/data-engineering-s01e02-storage-and-access/[S01E02: Storage and Access]
-* S01E03: Query & Transformation Engines
-* S01E04: ETL/ELT tools & Orchestration
-* S01E05: Architectures & Terminology
-* link:/2022/09/13/data-engineering-s01e06-resources/[S01E06: Resources]
+
+* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
+* link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
+* Query & Transformation Engines
+* ETL/ELT tools & Orchestration
+* Architectures & Terminology
+* link:/2022/09/14/data-engineering-resources/[Resources]
