Add dbt podcast

--- a/content/post/dataeng_resources.adoc
+++ b/content/post/dataeng_resources.adoc
@@ -43,6 +43,7 @@ The main podcast that I listen to in this area is the https://www.dataengineerin
   ** https://www.dataengineeringpodcast.com/data-lake-platform-design-srivatsan-sridharan-episode-289/[Insights And Advice On Building A Data Lake Platform From Someone Who Learned The Hard Way]
   ** https://www.dataengineeringpodcast.com/shadow-it-data-analytics-episode-121/[Shining A Light on Shadow IT In Data And Analytics]
 * Technology
+  ** https://www.dataengineeringpodcast.com/dbt-data-analytics-episode-81/[Build Your Data Analytics Like An Engineer With DBT]
   ** https://www.dataengineeringpodcast.com/hudi-streaming-data-lake-episode-209/[Charting A Path For Streaming Data To Fill Your Data Lake With Hudi]
   ** https://www.dataengineeringpodcast.com/lakefs-data-lake-versioning-episode-157/[Add Version Control To Your Data Lake With LakeFS]
 
