Add link to YouTube vid about automations

--- a/content/post/airtable_calendar.adoc
+++ b/content/post/airtable_calendar.adoc
@@ -36,7 +36,7 @@ would apply to the `.ics` but apparently not. Airtable support confirmed that th
 
 ## The Solution (kinda)
 
-This isn't a perfect solution because it won't automagically update as new records are added. However, if you have a static set of records, or are content to do additional manual work when you add any, then it may still be useful for you. 
+This isn't a perfect solution because it won't automagically update as new records are added (_UPDATE: see note below on how to do this!_). However, if you have a static set of records, or are content to do additional manual work when you add any, then it may still be useful for you. 
 
 1. Create a new table called `Calendar` (or whatever you want)
 2. Delete the columns that are created, and rename the primary field to something that represents the record that will be on the calendar. Since I'm using it to represent sessions at a conference I'm going to call it `Session`. 
@@ -91,6 +91,12 @@ image::/images/2022/09/airtable15.png[.ics share link]
 image::/images/2022/09/airtable16.png[External calendar view]
 
 NOTE: If you add new records to the source table you need to make sure that the link field has the primary field value set in it, otherwise the Calendar table that we've created won't get an entry for it. 
+
+## Update: AirTable's Support is Awesome 🎉
+
+How cool is this? I shared my blog with AirTable support and they made a video showing how to close the loop on this and automate adding records to the Calendar table from the main one! Check it out: 
+
+{{< youtube mEYl42Rhizs >}}
 
 ## Bonus Points: Fixing the Time Zones in Airtable Calendar
 
