--- a/content/post/dataeng_storage_access.adoc
+++ b/content/post/dataeng_storage_access.adoc
@@ -167,6 +167,8 @@ The "git for data" pitch is a great way to articulate things, but it also shifte
 * When your batch pipeline runs, it does so against a branch of the data. Before merging that branch back into trunk, a hook can be configured to do various data quality checks (just as you'd configure hooks in GitHub etc to check for code quality, test suites, etc etc). This could be things like checking for PII slipping through, or simply "did we process the approximate number of records that we would expect". If that kind of check fails because the source data's gone bad or failed up stream then you potentially save yourself a ton of unpicking that you'd have to do if it's updated directly in the Production data lake. 
 * As above, the batch pipeline creates a new branch when it runs, and when (or if) it completes successfully and merges that back into the trunk, that merge can have attached to it a bunch of metadata to do with the pipeline execution. What version of the code was it running, what version of the underlying frameworks on which it executed, and so on. Invaluable for tracing particular problems at a later date. 
 
+_I kicked the tyres on LakeFS and wrote about it link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[here]_
+
 '''
 
 ## Data Engineering in 2022
