--- a/content/post/dataeng_arch.adoc
+++ b/content/post/dataeng_arch.adoc
@@ -1,6 +1,6 @@
 ---
 draft: true
-title: "Data Engineering S01E05: Architectures & Terminology"
+title: "Data Engineering in 2022: Architectures & Terminology"
 date: "2022-09-13T10:50:56Z"
 image: "/images/2022/09/"
 thumbnail: "/images/2022/09/"
