fix links and titles

--- a/content/post/data_ecosystem_notes_2022.adoc
+++ b/content/post/data_ecosystem_notes_2022.adoc
@@ -110,9 +110,10 @@ What I'm going to do is dig into some of the particular areas that have caught m
 
 '''
 
-* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
+// * link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
 * link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
-* Query & Transformation Engines
-* ETL/ELT tools & Orchestration
-* Architectures & Terminology
+* link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
+* Query & Transformation Engines [TODO]
+* ETL/ELT tools & Orchestration [TODO]
+* Architectures & Terminology [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
