--- a/content/post/dataeng_resources.adoc
+++ b/content/post/dataeng_resources.adoc
@@ -52,9 +52,10 @@ The main podcast that I listen to in this area is the https://www.dataengineerin
 
 ## Data Engineering in 2022
 
-* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
+* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Introduction]
 * link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
-* Query & Transformation Engines
-* ETL/ELT tools & Orchestration
-* Architectures & Terminology
-* link:/2022/09/14/data-engineering-resources/[Resources]
+* link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
+* Query & Transformation Engines [TODO]
+* ETL/ELT tools & Orchestration [TODO]
+* Architectures & Terminology [TODO]
+// * link:/2022/09/14/data-engineering-resources/[Resources]
