--- a/content/post/dataeng_storage_access.adoc
+++ b/content/post/dataeng_storage_access.adoc
@@ -173,9 +173,10 @@ _I kicked the tyres on LakeFS and wrote about it link:/2022/09/16/data-engineeri
 
 ## Data Engineering in 2022
 
-* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
-* link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
-* Query & Transformation Engines
-* ETL/ELT tools & Orchestration
-* Architectures & Terminology
+* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Introduction]
+// * link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
+* link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
+* Query & Transformation Engines [TODO]
+* ETL/ELT tools & Orchestration [TODO]
+* Architectures & Terminology [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
