Added footnote, marked some posts as draft

--- a/content/post/dataeng_intro.adoc
+++ b/content/post/dataeng_intro.adoc
@@ -117,3 +117,7 @@ What I'm going to do is dig into some of the particular areas that have caught m
 * ETL/ELT tools & Orchestration [TODO]
 * Architectures & Terminology [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
+
+## Footnote: _So What?_
+
+You may be wondering what is even the purpose of this blog? There's no "call to action", no great insight. And that's fine - this is just my notes for myself, and if they're of interest to anyone else then they are welcome to peruse them :) 
