--- a/content/post/dataeng_query_and_xform.adoc
+++ b/content/post/dataeng_query_and_xform.adoc
@@ -1,5 +1,5 @@
 ---
-draft: false
+draft: true
 title: 'Data Engineering in 2022: Query & Transformation Engines'
 date: "2022-09-17T17:07:04Z"
 // image: "/images/2022/09/h_IMG_8389.jpeg"
