--- a/content/post/dataeng_query_and_xform.adoc
+++ b/content/post/dataeng_query_and_xform.adoc
@@ -14,9 +14,20 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
+I previously looked at how we /2022/09/14/data-engineering-in-2022-storage-and-access/[store data] for analytics, with the interesting idea of data lakes with table formats (a.k.a. Data Lakehouse) considered. In this article I'll move to the next piece of the puzzle - what tools there are for working with that data. 
 
+There are two distinct areas of work done on data held in this way: querying it directly for analysis, and processing it to transform it into a new set of data which is then written back to the same storage or to a different data store. 
 
 <!--more-->
+
+## rough notes ##
+
+dbt doesn't do ETL. It does T. Other tools to the E and L. 
+
+trino for querying data and maybe T
+
+spark for T
+
 
 
 '''
