--- a/content/post/dataeng_resources.adoc
+++ b/content/post/dataeng_resources.adoc
@@ -2,8 +2,8 @@
 draft: false
 title: 'Data Engineering: Resources'
 date: "2022-09-14T20:57:21Z"
-// image: "/images/2022/09/"
-// thumbnail: "/images/2022/09/"
+image: "/images/2022/09/h_RemoteMediaFile_6554172_0_2022_07_02_12_04_48.jpeg"
+thumbnail: "/images/2022/09/t_DSCF7583.jpeg"
 credit: "https://twitter.com/rmoff/"
 categories:
 - Data Engineering
