--- a/content/post/dataeng_storage_access.adoc
+++ b/content/post/dataeng_storage_access.adoc
@@ -107,7 +107,7 @@ You can run run your own, or use used hosted versions including
 
 **Azure** have a close partnership with Databricks, so the only major cloud provider missing from this list is **AWS**. They have https://aws.amazon.com/lake-formation/[Lake Formation] and https://docs.aws.amazon.com/lake-formation/latest/dg/governed-tables.html[Governed Tables] which looks similar on the surface but I've not dug into in detail (and Governed Tables aren't even mentioned on AWS' https://aws.amazon.com/blogs/big-data/build-a-lake-house-architecture-on-aws/[Build a Lakehouse Architecture on AWS] blog). 
 
-**Snowflake** recently added support for https://www.snowflake.com/blog/iceberg-tables-powering-open-standards-with-snowflake-innovations/[Iceberg tables] (complementing the existing https://docs.snowflake.com/en/user-guide/tables-external-intro.html#delta-lake-support[support for Delta Lake external tables]), and are https://www.snowflake.com/blog/5-reasons-apache-iceberg/[backing Iceberg] — presumably in part to try and hamper Databricks' Delta Lake (see also their snarky comments about "_Iceberg includes features that are *paid in other table formats*_", "_The Iceberg project is *well-run* open source_" etc, taking a shot at the fact that Delta Lake has paid options, and the majority of committers are from Databricks). 
+**Snowflake** recently added support for https://www.snowflake.com/blog/iceberg-tables-powering-open-standards-with-snowflake-innovations/[Iceberg tables] (complementing the existing https://docs.snowflake.com/en/user-guide/tables-external-intro.html#delta-lake-support[support for Delta Lake external tables]), and are https://www.snowflake.com/blog/5-reasons-apache-iceberg/[backing Iceberg] — presumably in part to try and hamper Databricks' Delta Lake (see also their snarky comments about "_Iceberg includes features that are *paid in other table formats_*", "_The Iceberg project is *well-run* open source_" etc, taking a shot at the fact that Delta Lake has paid options, and the majority of committers are from Databricks). 
 
 https://www.dremio.com/[**Dremio**] are also in this space as one of the companies working on https://arrow.apache.org/[Apache Arrow] and providing a fast query engine built on it called Dremio Sonar. I've yet to get my head around their offering, but it looks like on-premises platform as well as hosted, with support for Apache Iceberg and Delta Lake. They've got a rich set of resources in their https://www.dremio.com/subsurface/[Subsurface] resource area.
 
