--- a/content/post/current22_5k.adoc
+++ b/content/post/current22_5k.adoc
@@ -16,7 +16,7 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
-At Current 22 a few of us will be going for an early run on Tuesday morning. Everyone is very welcome! 
+At https://2022.currentevent.io/[Current 22] a few of us will be going for an early run on Tuesday morning. Everyone is very welcome! 
 
 <!--more-->
 
@@ -31,10 +31,6 @@ image::/images/2022/09/FRLCLMjXEAAH5Uo.jpeg[Kafka Summit London 2022 - 5k Run]
 We're going to do the same thing again at Current next week in Austin! 
 
 image::/images/2022/09/tomek-baginski-ABUCYck67CQ-unsplash_cap.jpg[Austin Waterfront]
-
-+++
-<em>Photo by <a href="https://unsplash.com/@tombag?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tomek Baginski</a> on <a href="https://unsplash.com/s/photos/austin-waterfront?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></em>
-+++
 
 '''
 
