Update for confluent CLI

--- a/content/post/ksqldb-local-to-cloud.adoc
+++ b/content/post/ksqldb-local-to-cloud.adoc
@@ -25,11 +25,11 @@ Once you've got ksqlDB provisioned on Confluent Cloud you can use the web-based 
 
 You need to generate an API keypair for your ksqlDB instance (known as an application). This is a different API keypair from that which you will have for your Kafka brokers on Confluent Cloud. 
 
-Using the https://docs.confluent.io/ccloud-cli/current/index.html?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_ksqldb-local-to-cloud&utm_term=rmoff-devx[Confluent Cloud CLI], first authenticate: 
+Using the https://docs.confluent.io/confluent-cli/current/overview.html?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_ksqldb-local-to-cloud&utm_term=rmoff-devx[Confluent CLI], first authenticate: 
 
 [source,bash]
 ----
-$ ccloud login
+$ confluent login
 …
 Logged in as "rick@nevergonnagiveyouup.com".
 Using environment "t4242" ("default").
@@ -39,7 +39,7 @@ Then list out the ksqlDB application(s) present:
 
 [source,bash]
 ----
-$ ccloud ksql app list
+$ confluent ksql cluster list
 
        Id      |   Name   | Topic Prefix |   Kafka   | Storage |                          Endpoint                          | Status
 +--------------+----------+--------------+-----------+---------+------------------------------------------------------------+--------+
@@ -52,7 +52,7 @@ Make a note of the Endpoint, as well as the `Id` of the ksqlDB application to wh
 
 [source,bash]
 ----
-$ ccloud api-key create --resource lksqlc-1234
+$ confluent api-key create --resource lksqlc-1234
 It may take a couple of minutes for the API key to be ready.
 Save the API key and secret. The secret is not retrievable later.
 +---------+------------------------------------------------------------------+
@@ -89,7 +89,7 @@ You can install ksqlDB locally as part of the https://www.confluent.io/download/
 source .env
 
 docker run --interactive --tty --rm \
-  confluentinc/ksqldb-server:0.15.0 \
+  confluentinc/ksqldb-server:0.28.2 \
   ksql -u $CCLOUD_KSQL_API_KEY \
        -p $CCLOUD_KSQL_API_SECRET \
           $CCLOUD_KSQL_ENDPOINT
@@ -104,13 +104,13 @@ docker run --interactive --tty --rm \
                   =      |   <\__ \ (_| | | |_| | |_) |     =
                   =      |_|\_\___/\__, |_|____/|____/      =
                   =                   |_|                   =
-                  =  Event Streaming Database purpose-built =
+                  =        The Database purpose-built       =
                   =        for stream processing apps       =
                   ===========================================
 
-Copyright 2017-2020 Confluent Inc.
+Copyright 2017-2022 Confluent Inc.
 
-CLI v0.15.0, Server v0.15.0-rc863 located at https://pksqlc-1234.europe-north1.gcp.confluent.cloud:443
+CLI v0.28.2, Server v0.28.2-rc8 located at https://pksqlc-m5ny7.us-west4.gcp.confluent.cloud:443
 Server Status: RUNNING
 
 Having trouble? Type 'help' (case-insensitive) for a rundown of how things work!
@@ -133,10 +133,10 @@ content-type: application/json
 
 {
     "KsqlServerInfo": {
-        "kafkaClusterId": "lkc-*****",
-        "ksqlServiceId": "pksqlc-1234",
+        "kafkaClusterId": "lkc-v7vwnz",
+        "ksqlServiceId": "pksqlc-m5ny7",
         "serverStatus": "RUNNING",
-        "version": "0.15.0-rc863"
+        "version": "0.28.2-rc8"
     }
 }
 ----
@@ -146,7 +146,7 @@ The same thing works with `curl` (just not as natively pretty-printed 😃):
 [source,bash]
 ----
 $ curl -u $CCLOUD_KSQL_API_KEY:$CCLOUD_KSQL_API_SECRET $CCLOUD_KSQL_ENDPOINT/info
-{"KsqlServerInfo":{"version":"0.15.0-rc863","kafkaClusterId":"lkc-*****","ksqlServiceId":"pksqlc-1234","serverStatus":"RUNNING"}}
+{"KsqlServerInfo":{"version":"0.28.2-rc8","kafkaClusterId":"lkc-v7vwnz","ksqlServiceId":"pksqlc-m5ny7","serverStatus":"RUNNING"}}%
 ----
 
 The https://docs.ksqldb.io/en/latest/developer-guide/ksqldb-rest-api/ksql-endpoint/?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_ksqldb-local-to-cloud&utm_term=rmoff-devx[`/ksql`] endpoint is used to run statements, such as listing topics: 
