Move all KSQL posts to ksqlDB category

--- a/content/post/a-poor-mans-ksql-explode.adoc
+++ b/content/post/a-poor-mans-ksql-explode.adoc
@@ -4,7 +4,7 @@ date: "2019-05-09T10:01:50+01:00"
 image: "/images/2019/05/P1090619.jpg"
 thumbnail: "/images/2019/05/IMG_3778.jpg"
 categories:
-- KSQL
+- ksqlDB
 ---
 
 There is an https://github.com/confluentinc/ksql/issues/527[open issue for support of `EXPLODE`/`UNNEST` functionality in KSQL], and if you need it then do up-vote the issue. Here I detail a hacky, but effective, workaround for exploding arrays into multiple messages—so long as you know the upper-bound on your array. 
