--- a/content/post/exploring-ksql-stream-stream-joins.adoc
+++ b/content/post/exploring-ksql-stream-stream-joins.adoc
@@ -7,7 +7,7 @@ image: "/images/2019/03/IMG_8910.jpg"
 credit: ""
 thumbnail: "/images/2019/03/IMG_8890.jpg"
 categories:
-- KSQL
+- ksqlDB
 - Stream processing
 ---
 
