--- a/content/post/how-ksql-handles-case.adoc
+++ b/content/post/how-ksql-handles-case.adoc
@@ -8,7 +8,7 @@ image: "/images/2019/01/IMG_7989.jpg"
 credit: ""
 thumbnail: ""
 categories:
-- ksql
+- ksqlDB
 ---
 
 https://www.confluent.io/ksql[KSQL] is generally case-sensitive. Very sensitive, at times ;-)
