Finished ETL/ELT article

--- a/content/post/dataeng_intro.adoc
+++ b/content/post/dataeng_intro.adoc
@@ -79,7 +79,7 @@ The data engineering world has realised—if not fully accepted—that software 
 
 Hardware is not limited to what you can procure and provision in your data center through a regimented and standardised central process, but whatever you can imagine (and afford) in the Cloud. Laptops themselves are so powerful that much processing can just be done locally. And the fact that it's laptops is notable - now anyone can work anywhere. The desktop machine in the office is becoming an anachronistic idea except for specialised roles such as video processing. That mobility in its adds considerations to how technology serves us too. 
 
-Both https://seattledataguy.substack.com/[SeattleDataGuy] in his article https://seattledataguy.substack.com/p/the-baseline-datastack-going-beyond[The Baseline Data Stack] and https://www.linkedin.com/in/jamesdensmore/[James Densmore] in his book https://www.oreilly.com/library/view/data-pipelines-pocket/9781492087823/[Data Pipelines Pocket Reference] describe a basic approach to moving data into a place from which it can be analysed. Build a pipeline to do a batch extract of data from the source system into a target store from which it can be worked on. No streaming, no fancy tooling - just good ole' ETL. Same as we saw above, right? 
+Both https://seattledataguy.substack.com/[SeattleDataGuy] in his article https://seattledataguy.substack.com/p/the-baseline-datastack-going-beyond[The Baseline Data Stack] and https://www.linkedin.com/in/jamesdensmore/[James Densmore] in his book https://www.oreilly.com/library/view/data-pipelines-pocket/9781492087823/[Data Pipelines Pocket Reference] describe a basic approach to moving data into a place from which it can be analysed. Build a pipeline to do a batch extract of data from the source system into a target store from which it can be worked on. No streaming, no fancy tooling - just good ole' ETL. Same as we saw above, right? link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[RIGHT?]
 
 +++
 <div class="tenor-gif-embed" data-postid="23108779" data-share-method="host" data-aspect-ratio="1" data-width="50%"><a href="https://tenor.com/view/sir-im-confused-butters-stotch-south-park-s15e6-city-sushi-gif-23108779">Sir Im Confused Butters Stotch GIF</a>from <a href="https://tenor.com/search/sir+im+confused-gifs">Sir Im Confused GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
@@ -113,9 +113,9 @@ What I'm going to do is dig into some of the particular areas that have caught m
 // * link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
 * link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
 * link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
+* link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
 * Query & Transformation Engines [TODO]
 * ETL/ELT tools & Orchestration [TODO]
-* Architectures & Terminology [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
 
 ## Footnote: _So What?_
