--- a/content/post/dataeng_resources.adoc
+++ b/content/post/dataeng_resources.adoc
@@ -55,7 +55,7 @@ The main podcast that I listen to in this area is the https://www.dataengineerin
 * link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Introduction]
 * link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
 * link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
+* link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
 * Query & Transformation Engines [TODO]
 * ETL/ELT tools & Orchestration [TODO]
-* Architectures & Terminology [TODO]
 // * link:/2022/09/14/data-engineering-resources/[Resources]
