--- a/content/post/dataeng_storage_access.adoc
+++ b/content/post/dataeng_storage_access.adoc
@@ -80,7 +80,7 @@ In short, the "Lakehouse" concept is where data is stored on object store (the D
 [link=https://www.cidrdb.org/cidr2021/papers/cidr2021_paper17.pdf] 
 image::/images/2022/09/lakehouse_dl01.png[Diagram of the evolution of the Lakehouse from Databricks]
 
-Whether you go for the **Lakehouse** term (Databricks would like you to, and https://www.snowflake.com/guides/what-data-lakehouse[Snowflake] are onboard too, and maybe even https://www.oracle.com/uk/data-lakehouse/what-is-data-lakehouse/[Oracle]) or just the **Data Lake plus Table Format**, it's a really interesting idea. The bit that really catches my attention is that it enables a common table structure to be defined and accessed by a variety of compute engines - meaning that in both querying and processing (ETL/ELT) the data can be structured and manipulated in the way in which you would in an RDBMS. 
+Whether you go for the **Lakehouse** term (Databricks would like you to, and https://www.snowflake.com/guides/what-data-lakehouse[Snowflake] are onboard too, and maybe even https://www.oracle.com/uk/data-lakehouse/what-is-data-lakehouse/[Oracle]) or just the **Data Lake plus Table Format**, it's a really interesting idea. The bit that really catches my attention is that it enables a common table structure to be defined and accessed by a variety of compute engines - meaning that in both querying and processing (link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[ETL/ELT]) the data can be structured and manipulated in the way in which you would in an RDBMS. 
 
 There are three table formats available:
 
@@ -176,7 +176,7 @@ _I kicked the tyres on LakeFS and wrote about it link:/2022/09/16/data-engineeri
 * link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Introduction]
 // * link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
 * link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
+* link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
 * Query & Transformation Engines [TODO]
 * ETL/ELT tools & Orchestration [TODO]
-* Architectures & Terminology [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
